Remove Depreciated JVM Dep