@@ -20,6 +20,8 @@
                   :exclusions [org.clojure/tools.reader]]
                  [antizer "0.2.2"]]
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+
   :plugins [[lein-environ "1.0.2"]
             [lein-cljsbuild "1.1.5"]
             [lein-asset-minifier "0.2.7"
